--- a/app.css
+++ b/app.css
@@ -1,4 +1,4 @@
-html, body {
+html, body, body .page {
     height: 100%;
     min-height: 100%;
 }
@@ -18,9 +18,31 @@ body {
 }
 
     .overlay div {
-        margin-top:20%;
+        margin-top: 20%;
+        width: 40%;
     }
 
     .overlay h2 {
         color: white;
     }
+
+
+#clock-container {
+    height: 20%;
+    background-color: grey;
+    padding:0 35%;
+    border: solid 2px white;
+}
+
+
+#main-container{
+    height:70%;
+    background-color:white;
+    border: solid 2px white;
+}
+
+#foot-container{
+    height:10%;
+    background-color:grey;
+    border: solid 2px white;
+}
