--- a/app.css
+++ b/app.css
@@ -1,14 +1,11 @@
-html, body, body .page {
+html, body {
     height: 100%;
 }
 
 body {
     position: relative;
+    padding: 12em 0;
 }
-
-    body div.page {
-        width: 95%;
-    }
 
 .overlay {
     position: absolute;
@@ -20,28 +17,9 @@ body {
     background-color: black;
 }
 
-    .overlay .center-block {
-        margin-top: 20%;
-        width: 40%;
-    }
-
-    .overlay h2 {
-        color: white;
-    }
-
-#clock-container {
-    color: white;
-    max-width: 60em;
-    min-width: 60em;
-    height: 15%;
-    vertical-align: middle;
-}
-
-#main-container {
-    height: 70%;
-    background-color: white;
-    border: solid 2px white;
-    padding: 0 2em;
+.overlay .center-block {
+    margin-top: 20%;
+    width: 40%;
 }
 
 .time-digits {
@@ -50,32 +28,6 @@ body {
     text-align: center;
     font-family: broadway;
     font-size: 8em;
-}
-
-div.score {
-    color: white;
-}
-
-    div.score.completed {
-        background-color: green;
-        color: white;
-    }
-
-    div.score.skipped {
-        background-color: yellow;
-        color: gray;
-    }
-
-    div.score p.score {
-        font-size: 5em;
-    }
-
-    div.score p.tag {
-        font-size: 2em;
-    }
-
-.overlay .center-block .row {
-    margin: 3em;
 }
 
 .word-container {
@@ -100,7 +52,7 @@ div.score {
     vertical-align: middle;
     line-height: 5em;
     cursor: pointer;
-    box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
+    box-shadow: 10px 10px 5px 0px rgba(0, 0, 0, 0.75);
 }
 
 .btn.next, .btn.skip {
@@ -129,32 +81,27 @@ div.header {
     height: 12em;
     color: white;
     text-align: center;
-    box-shadow: 57px 46px 109px -63px rgba(0,0,0,0.75);
+    box-shadow: 57px 46px 109px -63px rgba(0, 0, 0, 0.75);
 }
 
-    div.header span.title {
-        font-family: broadway;
-        font-size: 8em;
-    }
+div.header span.title {
+    font-family: broadway;
+    font-size: 8em;
+}
 
-    div.header .glyphicon, div.button-group .glyphicon {
-        font-size: 7em;
-        cursor: pointer;
-    }
+div.header .glyphicon, div.button-group .glyphicon {
+    font-size: 7em;
+    cursor: pointer;
+}
 
 div.button-group .glyphicon {
     margin: 12px;
-}
-
-body {
-    padding: 12em 0;
 }
 
 div.body-content, div.body-content .jumbotron {
     background-color: white;
     padding-bottom: 12em;
 }
-
 
 div.go-container {
     border-radius: 51px 51px 51px 51px;
@@ -163,17 +110,15 @@ div.go-container {
     cursor: pointer;
 }
 
-    div.go-container p {
-        font-family: broadway;
-        font-size: 8em;
-    }
-
+div.go-container p {
+    font-family: broadway;
+    font-size: 8em;
+}
 
 .word-container p.word {
     font-size: 9em;
     line-height: 3em;
 }
-
 
 .rules-page .footer, .guess-page .footer {
     color: white;
@@ -182,7 +127,6 @@ div.go-container {
     font-family: broadway;
     padding-right: 2em;
 }
-
 
 .stat-container div {
     text-align: center;
@@ -199,23 +143,21 @@ div.go-container {
     font-size: 5em;
 }
 
-
 .final-score-container div {
     text-align: center;
     border: solid 1px;
     margin: 1em;
 }
 
-    .final-score-container div .title {
-        font-family: Andalus;
-        font-size: 4em;
-    }
+.final-score-container div .title {
+    font-family: Andalus;
+    font-size: 4em;
+}
 
-    .final-score-container div .score {
-        font-family: Broadway;
-        font-size: 9em;
-    }
-
+.final-score-container div .score {
+    font-family: Broadway;
+    font-size: 9em;
+}
 
 .rules-page .jumbotron h2, .rules-page .jumbotron p {
     font-family: Andalus;
